--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,7 @@ celerybeat-schedule
 .env
 .venv
 env/
-venv/
+venv*/
 ENV/
 env.bak/
 venv.bak/
@@ -116,3 +116,6 @@ dmypy.json
 
 # Config file
 .config.json
+
+#vscode
+.history
